Bug 149023 - Unexpected change of color property after changing once, and selecting another image
Summary: Unexpected change of color property after changing once, and selecting anothe...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2022-05-10 21:30 UTC by Aron Budea
Modified: 2022-05-12 10:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By: Caolán McNamara


Attachments
Sample ODT (42.86 KB, application/vnd.oasis.opendocument.text)
2022-05-10 21:30 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2022-05-10 21:30:00 UTC
Created attachment 180049 [details]
Sample ODT

- Open the attached sample with two images,
- Click on one of the images to select it,
- On the Image toolbar, click the Color button (last one), which brings up a panel with settings,
- Change one of the properties, eg. Brightness to 50%, and press enter,
- Click on the other image.

=> The other image is changed as well.

Reproduced using LO 7.4.0.0.alpha0+ (67d8c245daf7c6ee33e908255f2bbd0ea8d08206), 7.0.0.3 / Windows.
Fine in 6.4.0.3.

Bibisected to the following commit using repo bibisect-win64-7.0, adding CC: to Caolán McNamara.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=75bd1ba4cd4eea179092f3c8fd7aa6b903b17993
author		Caolán McNamara <caolanm@redhat.com>	2020-02-07 13:25:08 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-02-07 20:49:04 +0100

weld ImplGrafControl ItemWindow
Comment 1 Caolán McNamara 2022-05-11 12:26:06 UTC
works as expected with gtk, but as described with gen
Comment 2 Commit Notification 2022-05-11 15:52:51 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/828a51e8617ece858b2f8bdc4a8d8759595beab0

tdf#149023 set property immediately on change

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Caolán McNamara 2022-05-11 15:54:38 UTC
done in trunk, backport to 7-3 in gerrit
Comment 4 Aron Budea 2022-05-11 22:18:27 UTC
Verified using LO 7.4.0.0.alpha0+ (5caa7f44b861876afa5b3b8f71e3848abd8875e6) / Windows. Thanks for fixing, Caolán!
Comment 5 Commit Notification 2022-05-12 10:38:02 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/1301b26b28b3d85bb6f5cd1dad53da1580f873ff

tdf#149023 set property immediately on change

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.