tdf#149023 set property immediately on change

and not in an idle which may be triggered on losing focus and
arrive when a new shape is selected

Change-Id: I7cec8f1c9bf864cdb30516dece1ef9d6b689a94e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/134211
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Aron Budea <aron.budea@collabora.com>